--- a/app.css
+++ b/app.css
@@ -1550,6 +1550,7 @@ SHUFFLE.js
 
 .newsimgwrap.full {
   width: 20.65em;
+  transition: all 0.3s cubic-bezier(.4,0,0,1);
   /* height: 100% */
 }
 
