--- a/app.css
+++ b/app.css
@@ -1549,7 +1549,7 @@ SHUFFLE.js
 }
 
 .newsimgwrap.full {
-  width: 20.65em;
+ /*  width: 20.65em; */
   transition: all 0.3s cubic-bezier(.4,0,0,1);
   /* height: 100% */
 }
@@ -1579,7 +1579,7 @@ SHUFFLE.js
   -ms-grid-rows: auto;
   grid-template-rows: auto;
   /* padding-top: 0em; */
-  padding-bottom: 1.25em;
+  padding-bottom: 2.1em;
   grid-column-gap: 2em;
 }
 
