--- a/app.css
+++ b/app.css
@@ -1592,7 +1592,7 @@ SHUFFLE.js
 }
 
 .autowidth {
-  width:auto!important;
+  width:11em!important;
 }
 .webinar-posts__event-filter .btn:hover,
 .webinar-posts__event-filter .btn:active,
