--- a/app.css
+++ b/app.css
@@ -49,12 +49,14 @@ KILL OUTLINE ON ALL
 HIDE PAGE CONTENT BY DEFAULT
 ================================================================================
 */
-
+.is-loading,
 .is-loading #main,
 .is-loading .header-container,
 .is-loading .fill-background {
   display: none;
 }
+
+
 /*
 ================================================================================
 IS LOADING BACKGROUND COLOR
