--- a/app.css
+++ b/app.css
@@ -330,8 +330,8 @@ GSAP PERFORMANCE FIX
 }   
 
 #main {
-  will-change: transform;
-  backface-visibility: hidden;
+/*   will-change: transform;
+  backface-visibility: hidden; */
 }   
 /*
 ================================================================================
