--- a/app.css
+++ b/app.css
@@ -330,7 +330,7 @@ GSAP PERFORMANCE FIX
 }   
 
 #main {
-  rotate:2;
+  transform: rotate(1deg);
 /*   will-change: transform;
   backface-visibility: hidden; */
 }   
