--- a/app.css
+++ b/app.css
@@ -324,16 +324,15 @@ GSAP PERFORMANCE FIX
 ================================================================================
 */
 
- .gsapfix {
+/*  .gsapfix {
   will-change: transform;
-  /*backface-visibility: hidden;*/
+  backface-visibility: hidden;
 }   
 
 #main {
- /* transform: rotate(1deg);
-/*   will-change: transform;
-  backface-visibility: hidden; */
-}   
+  will-change: transform;
+  backface-visibility: hidden;
+}    */
 /*
 ================================================================================
 DISABLE SELECTION
