--- a/app.css
+++ b/app.css
@@ -20,7 +20,7 @@ body {
 
 .smooth-scroll {
   overflow-y: hidden !important;
-  will-change: transform, opacity;
+  will-change: transform, opacity!important;
 }
 
 /*
