--- a/app.css
+++ b/app.css
@@ -19,9 +19,9 @@ body {
 }
 
 .smooth-scroll {
-  overflow-y: hidden;
+  overflow-y: hidden!important;
  /*  will-change: transform, opacity; */
-  will-change: scroll-position;
+ /*  will-change: scroll-position; */
   
  /*  transform: translate3d(0, 0, 0); */
 }
