--- a/app.css
+++ b/app.css
@@ -793,7 +793,7 @@ body .cursory {
   transform: translateX(-50%) translateY(-50%);
 } */
 
-.sorty, .control-me {
+.sorty, .togpapa {
 cursor: pointer;
 }
 
