--- a/app.css
+++ b/app.css
@@ -1745,6 +1745,7 @@ STATIC IMAGE ZA MAPU
   position: absolute;
   left:0;
   top:0;
+  width:100%;
       background: transparent;
       padding: .5em 0.5em 1.5em 2.5em!important;
      }
