--- a/app.css
+++ b/app.css
@@ -1,14 +1,14 @@
 body,
 html {
-  /* margin: 0;
+  margin: 0;
   padding: 0;
   overflow: hidden;
-  overflow-y: hidden; */
+  overflow-y: hidden;
 }
 body {
-/* 	-webkit-font-smoothing: antialiased;
+	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
-  transition: 0.3s ease-out; */
+  transition: 0.3s ease-out;
 }
 
 * {
@@ -19,7 +19,9 @@ body {
 }
 
 .smooth-scroll {
- /*  overflow-y: hidden!important; */
+  overflow-y: hidden!important;
+  transform: translateZ(0);
+-webkit-transform: translateZ(0);
  /*  will-change: transform, opacity; */
  /*  will-change: scroll-position; */
   
