--- a/app.css
+++ b/app.css
@@ -22,7 +22,7 @@ body {
   overflow-y: hidden!important;
   transform: translateZ(0);
 -webkit-transform: translateZ(0);
-   will-change: transform, opacity; 
+   /* will-change: transform, opacity;  */
  /*  will-change: scroll-position; */
   
  /*  transform: translate3d(0, 0, 0); */
