--- a/app.css
+++ b/app.css
@@ -1772,7 +1772,7 @@ PRINT TO PDF
   }
 
    .mockup    {
-    /* width: 500px!important;  */
+     width: 1920px!important;  
    /*  margin-left: 600px; */
     }
    /*
