--- a/app.css
+++ b/app.css
@@ -1735,7 +1735,7 @@ PRINT TO PDF
 @media print { 
   @page {
    /* margin: 0.5cm!important;  */
-   /*size: 3508px 2482px!important; */
+   size: 3508px 2482px!important; 
     } 
      
  h1 {
@@ -1772,8 +1772,8 @@ PRINT TO PDF
   }
 
    .mockup    {
-     width: 200px!important;  
-     margin-left: -300px; 
+    /*  width: 200px!important;  */ 
+     margin-left: -600px; 
     }
    /*
    .vizuale {
