--- a/app.css
+++ b/app.css
@@ -1767,13 +1767,13 @@ PRINT TO PDF
   }
   
   .print-logo {
-
+z-index:200;
     display: block;
   }
 
-  img {
-    max-width: 500px;
-    }
+ /*  img {
+    max-width: 300px;
+    } */
     
   /*  .mockup    {
      position: relative;
