--- a/app.css
+++ b/app.css
@@ -1771,6 +1771,19 @@ z-index:200;
     display: block;
   }
 
+  #w-node-_7de268a7-81d0-5662-af86-98639feca1e4-fab8b403 {
+    -ms-grid-row: 1;
+    grid-row-start: 1;
+    -ms-grid-row-span: 5;
+    grid-row-end: 6;
+    -ms-grid-column: 1;
+    grid-column-start: 1;
+    -ms-grid-column-span: 11;
+    grid-column-end: 12;
+}
+
+
+
  /*  img {
     max-width: 300px;
     } */
