--- a/app.css
+++ b/app.css
@@ -1735,7 +1735,7 @@ PRINT TO PDF
 @media print { 
   @page {
    /* margin: 0.5cm!important;  */
-   size: 3508px 2482px!important; 
+   /*size: 3508px 2482px!important; */
     } 
      
  h1 {
