--- a/app.css
+++ b/app.css
@@ -1771,6 +1771,11 @@ z-index:200;
     display: block;
   }
 
+
+  .vizuale {
+margin-top:150px;
+
+  } 
   /* #w-node-_7de268a7-81d0-5662-af86-98639feca1e4-fab8b403 {
     -ms-grid-row: 1;
     grid-row-start: 1;
