--- a/app.css
+++ b/app.css
@@ -1773,9 +1773,9 @@ z-index:200;
 
 
   .vizuale {
-    position:relative;
-    width:100%;
-    left: -250px;
+    /* position:relative; */
+    width:1100px;
+    /* left: -250px; */
 /*  margin-left:-300px;  */
 
   } 
