--- a/app.css
+++ b/app.css
@@ -1775,6 +1775,7 @@ z-index:200;
   .vizuale {
     /* position:relative; */
     width:1100px;
+    height:740px;
     /* left: -250px; */
 /*  margin-left:-300px;  */
 
