--- a/app.css
+++ b/app.css
@@ -1774,8 +1774,8 @@ z-index:200;
 
   .vizuale {
     /* position:relative; */
-    width:1100px;
-    height:740px;
+   /*  width:1100px;
+    height:740px; */
     /* left: -250px; */
 /*  margin-left:-300px;  */
 
