--- a/app.css
+++ b/app.css
@@ -1777,10 +1777,10 @@ z-index:200;
 }
 
 
-  .vizuale {
+  .vizuale img {
     /* position:relative; */
-   /*  width:1100px;
-    height:740px; */
+  width:500px;
+  /*   height:740px;  */
     /* left: -250px; */
 /*  margin-left:-300px;  */
 
