--- a/app.css
+++ b/app.css
@@ -1779,7 +1779,8 @@ z-index:200;
 
   .vizuale img {
     /* position:relative; */
-  width:1920px;
+  /* width:1920px; */
+  height: 100%;
   /*   height:740px;  */
     /* left: -250px; */
 /*  margin-left:-300px;  */
