--- a/app.css
+++ b/app.css
@@ -1780,7 +1780,7 @@ z-index:200;
   .vizuale img {
     /* position:relative; */
   /* width:1920px; */
-  height: 100%;
+  height: 1240px;
   /*   height:740px;  */
     /* left: -250px; */
 /*  margin-left:-300px;  */
