--- a/app.css
+++ b/app.css
@@ -1779,8 +1779,8 @@ z-index:200;
 
   .vizuale img {
     /* position:relative; */
-  /* width:1920px; */
-  height: 100px;
+   width:1920px; 
+  height: 1280px;
   /*   height:740px;  */
     /* left: -250px; */
 /*  margin-left:-300px;  */
