--- a/app.css
+++ b/app.css
@@ -1395,7 +1395,8 @@ SHUFFLE.js
 }
 
 .webinar-posts__event-item {
-  width: calc(50% - 20px);
+  width: 48%;
+  /* width: calc(50% - 20px); */
   /*   overflow: hidden;
    position: relative; */
 }
