--- a/app.css
+++ b/app.css
@@ -1395,8 +1395,7 @@ SHUFFLE.js
 }
 
 .webinar-posts__event-item {
-  width: 48%;
-  /* width: calc(50% - 20px); */
+  width: calc(50% - 5px);
   /*   overflow: hidden;
    position: relative; */
 }
