--- a/app.css
+++ b/app.css
@@ -874,7 +874,7 @@ TEST YOUR DESIGN
 
 
   .photo-crop-container .crop-preview-cont #crop_img {
-    position: absolute;
+ /*    position: absolute;
     bottom: 0.52em;
     width: 2.5em;
     height: 2.5em;
@@ -889,7 +889,7 @@ TEST YOUR DESIGN
     border-radius: 100%;
     display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: center; */
   }
 
   .photo-crop-container.show-result .crop-preview-cont .img_container {
