--- a/app.css
+++ b/app.css
@@ -874,7 +874,7 @@ TEST YOUR DESIGN
 
 
   .photo-crop-container .crop-preview-cont #crop_img {
- /*    position: absolute;
+    position: absolute;
     bottom: 0.52em;
     width: 2.5em;
     height: 2.5em;
@@ -889,7 +889,7 @@ TEST YOUR DESIGN
     border-radius: 100%;
     display: flex;
     justify-content: center;
-    align-items: center; */
+    align-items: center;
   }
 
   .photo-crop-container.show-result .crop-preview-cont .img_container {
@@ -923,14 +923,16 @@ TEST YOUR DESIGN
     position: relative;
   }
 
-  .photo-crop-container #user_cropped_img img {
+
+  /**/
+/*   .photo-crop-container #user_cropped_img img {
     width: 100%!important;
   }
 
   #mobile #slideshow #user_cropped_img img {
     width: 100%!important;
-  }
-
+  } */
+/**/
   .photo-crop-container #user_cropped_img img {
     -webkit-transition: all cubic-bezier(0.22, 0.61, 0.36, 1) 0.2s 2.3s;
     -o-transition: all cubic-bezier(0.22, 0.61, 0.36, 1) 0.2s 2.3s;
