--- a/app.css
+++ b/app.css
@@ -1353,9 +1353,8 @@ VIZUAL SIMULATOR CSS
 
 
 .mobile {
-  filter:blur(.5px);
+ /*  filter:blur(.5px);
 	overflow: hidden;
-/*position: absolute;*/
 	z-index: 100;
  	outline: 1px solid transparent;
   -webkit-backface-visibility: hidden;
@@ -1366,7 +1365,7 @@ VIZUAL SIMULATOR CSS
   -webkit-transform: rotateZ(2deg);
   -webkit-perspective: 1000;
 	-webkit-transform-origin: 0 0 0;
-	transform-origin: 0 0 0;
+	transform-origin: 0 0 0; */
 
 }
 
