--- a/app.css
+++ b/app.css
@@ -1099,6 +1099,12 @@ user-select:none;
   width: 100%!important;
 }
 
+
+.slideshow__item img {
+  width: 100%;
+}
+
+
 /*
 ================================================================================
 VIDEO PREVIEW CSS
