--- a/app.css
+++ b/app.css
@@ -1498,10 +1498,10 @@ SHUFFLE.js
      }
   }
 
- /*  .removevideo.hide, .movevideo.hide {
+  .removevideo.sakrij, .movevideo.sakrij {
     opacity: 0;
  
-  } */
+  } 
 
 
 /*
