--- a/app.css
+++ b/app.css
@@ -983,7 +983,7 @@ FILEPOND STYLING
 
 
 .filepond--file-action-button.filepond--file-action-button {
-  background-color: var(--frkayellow)!important;
+  background-color: var(--frkablack)!important;
   
 }
 
