--- a/app.css
+++ b/app.css
@@ -983,7 +983,7 @@ FILEPOND STYLING
 
 
 .filepond--file-action-button.filepond--file-action-button {
-  background-color: var(--frkablack)!important;
+  background-color: var(--frkayellow)!important;
   
 }
 
@@ -1039,7 +1039,7 @@ FILEPOND STYLING
 /* the color of the focus ring */
 .filepond--file-action-button:hover,
 .filepond--file-action-button:focus {
-  background-color: var(--frkablack)!important;
+  background-color: var(--frkayellow)!important;
   box-shadow: 0 0 0 0em rgba(244,221,84,0)!important; 
 }
 
