--- a/app.css
+++ b/app.css
@@ -1167,7 +1167,7 @@ VIDEO PREVIEW CSS
   height: 13px;
   border-radius: 50%;
   margin-top: -5px;
-  background: #fff;
+  background: var(--frkayellow)!important;;
 }
 .filepond--media-preview-wrapper {
   position: absolute;
