--- a/app.css
+++ b/app.css
@@ -1207,8 +1207,13 @@ VIDEO PREVIEW CSS
   color: var(--frkablack)!important;
 }
 
+.filepond--file .filepond--progress-indicator[data-align*='right'] {
+  margin-right: 0.19em!important;
+}
 
-
+.filepond--file .filepond--progress-indicator {
+  margin-top: 0.19em!important;
+}
 
 /*
 ================================================================================
