--- a/app.css
+++ b/app.css
@@ -1439,6 +1439,7 @@ SHUFFLE.js
 
 .webinar-posts__event-list li {
   margin: 0 1px 20px;
+  background-color: antiquewhite;
 }
 
 .webinar-posts__event-item {
