--- a/app.css
+++ b/app.css
@@ -1446,7 +1446,7 @@ SHUFFLE.js
 
 .webinar-posts__event-list li {
   margin: 0 1px 20px;
-  background-color: #FFFCF0;
+  background-color: #FFF8E0;
 }
 
 .webinar-posts__event-item {
