--- a/app.css
+++ b/app.css
@@ -61,6 +61,17 @@ HIDE PAGE CONTENT BY DEFAULT
   display: none;
 }
 
+.fill-background {
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  will-change: background-color;
+  background-color: "ff0000";
+  transition: background-color 0.3s linear;
+}
+
 
 /*
 ================================================================================
