--- a/app.css
+++ b/app.css
@@ -57,7 +57,7 @@ HIDE PAGE CONTENT BY DEFAULT
 */
 .is-loading #main,
 .is-loading .header-container,
-.is-loading .fill-background {
+.is-loading .fill-backgroundx {
   display: none;
 }
 
@@ -67,6 +67,7 @@ HIDE PAGE CONTENT BY DEFAULT
   width: 100%;
   height: 100%;
   position: fixed;
+  z-index: 10;
   will-change: background-color;
   background-color: "ff0000";
   transition: background-color 0.3s linear;
