--- a/app.css
+++ b/app.css
@@ -80,7 +80,7 @@ IS LOADING BACKGROUND COLOR
 ================================================================================
 */
 .is-loading {
-  background-color: var(--frkablack);
+  display:none;
 }
 /*
 ================================================================================
