--- a/app.css
+++ b/app.css
@@ -37,7 +37,7 @@ DEFINE ROOT VARIABLES / definiraj svoje
   --frkayellow:#ffdc52;
   --frkablack: #231f20;
   --loader-width: 30vw;
-  --loader-height: 1px;
+  --loader-height: 10vw;
 }
 /*
 ================================================================================
