--- a/app.css
+++ b/app.css
@@ -904,7 +904,7 @@ TEST YOUR DESIGN
 
 
 
- /*  .photo-crop-container .crop-preview-cont #crop_img {
+   .photo-crop-container .crop-preview-cont #crop_img {
     position: absolute;
     bottom: 0.52em;
     width: 2.5em;
@@ -922,7 +922,7 @@ TEST YOUR DESIGN
     justify-content: center;
     align-items: center;
   }
- */
+
 
 
   .photo-crop-container.show-result .crop-preview-cont .img_container {
