--- a/app.css
+++ b/app.css
@@ -1632,8 +1632,12 @@ STATIC IMAGE ZA MAPU
 .onama-h1.fix {
   position: relative;
  /*  left: -0.5em; */
-
 }
+ .onama-h1.fix.max {
+  max-width: 78ch;
+}
+
+
 .leftfix {
     
    left: 0em;  
