--- a/app.css
+++ b/app.css
@@ -1388,7 +1388,7 @@ VIZUAL SIMULATOR CSS
 
 
 .mobile {
-  /* filter:blur(.5px); */
+   filter:blur(.5px); 
 	overflow: hidden;
 	z-index: 100;
  	outline: 1px solid transparent;
