--- a/app.css
+++ b/app.css
@@ -1780,7 +1780,7 @@ PRINT TO PDF
 @media print { 
   @page {
  /*   margin: 5cm!important;   */
-   size: 3508px 2482px!important; 
+  /*  size: 3508px 2482px!important; */ 
     } 
      
 /*  h1 {
