--- a/app.css
+++ b/app.css
@@ -1822,7 +1822,7 @@ z-index:200;
 }
 
 .mockup img {
-  width:100%;
+  width:1920px;
   /* position:relative; */
   /*  width:1920px;  */
   /* height: 1280px; */
