--- a/app.css
+++ b/app.css
@@ -1821,8 +1821,8 @@ z-index:200;
 
 }
 
-.mockup img {
-  width:1920px;
+.mockup  {
+  width:80%;
   /* position:relative; */
   /*  width:1920px;  */
   /* height: 1280px; */
