--- a/app.css
+++ b/app.css
@@ -1779,7 +1779,7 @@ PRINT TO PDF
 
 @media print { 
   @page {
- /*   margin: 5cm!important;   */
+   margin-left: 5cm!important;   
   /*  size: 3508px 2482px!important; */ 
     } 
      
