--- a/app.css
+++ b/app.css
@@ -1825,14 +1825,14 @@ z-index:200;
 
 }
 
-/* mockup img { */
+ mockup img { 
     /* position:relative; */
   /*  width:1920px;  */
   /* height: 1280px; */
   /*   height:740px;  */
     /* left: -250px; */
 /*  margin-left:-300px;  */
-
+max-width:100%
   /* }  */
   /* #w-node-_7de268a7-81d0-5662-af86-98639feca1e4-fab8b403 {
     -ms-grid-row: 1;
@@ -1843,7 +1843,8 @@ z-index:200;
     grid-column-start: 1;
     -ms-grid-column-span: 11;
     grid-column-end: 12;
-} */
+    */
+} 
 
 
 
